--- a/_config.yml
+++ b/_config.yml
@@ -58,116 +58,41 @@ avatar: "https://avatars0.githubusercontent.com/u/8897534"
 # All the social media and other sites that we want to link to. The 'show' flag determines if the link is shown.
 # The order of this list controls the order of the links on the page. Feel free to add.
 links:
-  - xing:
-      name: Xing
-      show: false
-      href: https://www.xing.com/profile/YOUR_XING_USERNAME/
-      icon: fab fa-xing
-  - linkedin:
-      name: LinkedIn
-      show: false
-      href: https://linkedin.com/in/YOUR_LINKEDIN_USERNAME/
-      icon: fab fa-linkedin
-  - googleplus:
-      name: Google+
-      show: false
-      href: https://plus.google.com/+YOUR_GOOGLEPLUS_USERNAME
-      icon: fab fa-google-plus
+  - blog:
+      name: Blog
+      show: true
+      href: https://www.drbits.org
+      icon: fas fa-book-open
+  - medium:
+      name: Medium
+      show: true
+      href: https://medium.com/@thedrbits
+      icon: fab fa-medium
   - twitter:
       name: Twitter
       show: true
-      href: https://twitter.com/YOUR_TWITTER_USERNAME
+      href: https://twitter.com/thedrbits
       icon: fab fa-twitter
-  - weibo:
-      name: 微博
+  - linkedin:
+      name: LinkedIn
       show: true
-      href: https://weibo.com/YOUR_WEIBO_USERNAME
-      icon: fab fa-weibo
-  - vine:
-      name: Vine
-      show: false
-      href: https://vine.co/YOUR_VINE_USERNAME
-      icon: fab fa-vine
+      href: https://www.linkedin.com/in/ricedan/
+      icon: fab fa-linkedin
   - facebook:
       name: Facebook
       show: false
       href: https://facebook.com/YOUR_FB_USERNAME
       icon: fab fa-facebook
-  - vkontakte:
-      name: ВКонтакте
-      show: true
-      href: https://vk.com/YOUR_VK_USERNAME
-      icon: fab fa-vk
-  - instagram:
-      name: Instagram
-      show: false
-      href: https://instagram.com/YOUR_INSTAGRAM_USERNAME
-      icon: fab fa-instagram
-  - flickr:
-      name: Flickr
-      show: false
-      href: https://flickr.com/photos/YOUR_FLICKR_USERNAME
-      icon: fab fa-flickr
-  - steam:
-      name: Steam
-      show: false
-      href: http://steamcommunity.com/id/YOUR_STEAM_CUSTOM_ID
-      icon: fab fa-steam
-  - soundcloud:
-      name: Soundcloud
-      show: false
-      href: https://soundcloud.com/YOUR_SOUNDCLOUD_USERNAME
-      icon: fab fa-soundcloud
-  - lastfm:
-      name: Last.fm
-      show: false
-      href: http://www.last.fm/user/YOUR_LASTFM_USERNAME
-      icon: fab fa-lastfm
   - github:
       name: GitHub
       show: true
-      href: https://github.com/tsjensen
+      href: https://github.com/thedrbits
       icon: fab fa-github
-  - codepen:
-      name: CodePen
-      show: false
-      href: https://codepen.io/YOUR_CODEPEN_USERNAME
-      icon: fab fa-codepen
-  - stackoverflow:
-      name: Stack Overflow
-      show: false
-      href: https://stackoverflow.com/users/YOUR_SO_USERNAME/
-      icon: fab fa-stack-overflow
-  - reddit:
-      name: Reddit
-      show: false
-      href: https://reddit.com/user/YOUR_REDDIT_USERNAME
-      icon: fab fa-reddit
-  - medium:
-      name: Medium
-      show: false
-      href: https://medium.com/@YOUR_MEDIUM_USERNAME
-      icon: fab fa-medium
-  - tumblr:
-      name: Tumblr
-      show: false
-      href: https://YOUR_TUMBLR_USERNAME.tumblr.com/
-      icon: fab fa-tumblr
-  - blog:
-      name: Blog
-      show: true
-      href: http://host.domain/your_blog
-      icon: fas fa-book-open
   - email:
       name: Email
       show: true
-      href: mailto:jonathan.doe@host.domain
+      href: dan@drbits.org
       icon: fas fa-envelope
-  - publickey:
-      name: PGP Key
-      show: true
-      href: https://pastebin.com/raw/YOUR_PUBLIC_KEY
-      icon: fas fa-key
 
 
 # Extra HTML which will be displayed below the links. Keep it short. Leave empty to disable.
