--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,6 @@ links:
 # Extra HTML which will be displayed below the links. Keep it short. Leave empty to disable.
 #extra_html:
 extra_html: >
-    Any (multiline) text containing simple HTML,
-    such as links or ... lorem ipsum.
+    We build apps that achieve massive, organic, viral growth
 
 #EOF
