--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,6 @@ links:
 # Extra HTML which will be displayed below the links. Keep it short. Leave empty to disable.
 #extra_html:
 extra_html: >
-    We build apps that achieve massive, organic, viral growth
+    Building apps for massive, organic, viral growth
 
 #EOF
